--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -4,18 +4,24 @@
   vars:
     - scumblr_rails_user: _scumblr
     - scumblr_db_adapter: sqlite3
+    - scumblr_version: v1.1
     - rbenv:
         env: user
-        version: v0.4.0
-## From scumblr wiki (bundle command dependency)
+        version: v1.0.0
+### From scumblr wiki (bundle command dependency) - v1
         ruby_version: 2.0.0-p481
-#        ruby_version: 2.2.3
     - rbenv_repo: "https://github.com/sstephenson/rbenv.git"
     - rbenv_plugins:
-        - { name: "ruby-build",         repo: "https://github.com/sstephenson/ruby-build.git",         version: "v20151028" }
+        - { name: "ruby-build",         repo: "https://github.com/sstephenson/ruby-build.git",         version: "v20160913" }
         - { name: "rbenv-rehash",       repo: "https://github.com/rbenv/rbenv-gem-rehash.git",         version: "v1.0.0" }
     - rbenv_users:
         - "{{ scumblr_rails_user }}"
+## Scumblr v2
+#    - scumblr_version: v2.0
+#    - rbenv:
+#        env: user
+#        version: v1.0.0
+#        ruby_version: 2.3.1
   roles:
     - { role: adduser, adduser_user_name: _scumblr, adduser_user_home: '/home/_scumblr', adduser_user_comments: 'Scumblr rails app user', adduser_public_keys: [], adduser_sudoroot: false }
     - sketchy
