--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -23,7 +23,7 @@
 #        version: v1.0.0
 #        ruby_version: 2.3.1
   roles:
-    - { role: adduser, adduser_user_name: _scumblr, adduser_user_home: '/home/_scumblr', adduser_user_comments: 'Scumblr rails app user', adduser_public_keys: [], adduser_sudoroot: false }
-    - sketchy
-    - scumblr
+    - { role: juju4.adduser, adduser_user_name: _scumblr, adduser_user_home: '/home/_scumblr', adduser_user_comments: 'Scumblr rails app user', adduser_public_keys: [], adduser_sudoroot: false }
+    - juju4.sketchy
+    - juju4.scumblr
 
