--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -3,13 +3,7 @@
 - hosts: all
   vars:
     - scumblr_rails_user: _scumblr
-    - scumblr_db_adapter: sqlite3
-    - scumblr_version: v1.1
-    - rbenv:
-        env: user
-        version: v1.0.0
-### From scumblr wiki (bundle command dependency) - v1
-        ruby_version: 2.0.0-p481
+    - scumblr_rails_env: development
     - rbenv_repo: "https://github.com/sstephenson/rbenv.git"
     - rbenv_plugins:
         - { name: "ruby-build",         repo: "https://github.com/sstephenson/ruby-build.git",         version: "v20160913" }
@@ -17,13 +11,37 @@
     - rbenv_users:
         - "{{ scumblr_rails_user }}"
 ## Scumblr v2
-#    - scumblr_version: v2.0
-#    - rbenv:
-#        env: user
-#        version: v1.0.0
-#        ruby_version: 2.3.1
+    - scumblr_version: v2.0
+    - rbenv:
+        env: user
+        version: v1.0.0
+        ruby_version: 2.3.1
+    - scumblr_db_adapter: postgresql
+    - scumblr_db_database: db-scumblr-postgresql
+    - scumblr_db_user: user-scumblr
+    - scumblr_db_pass: pass-scumblr
+    - scumblr_db_host: localhost
+    - scumblr_db_port: 5432
+    - postgresql_databases:
+        - name: "{{ scumblr_db_database }}_{{ scumblr_rails_env }}"
+    - postgresql_users:
+        - name: "{{ scumblr_db_user }}"
+          password: "{{ scumblr_db_pass }}"
+          db: "{{ scumblr_db_database }}_{{ scumblr_rails_env }}"
+## settings for geerlingguy.postgresql to get more recent release, mostly necessary for pre-xenial release
+    - postgresql_enablerepo: "http://apt.postgresql.org/pub/repos/apt/"
+    - postgresql_enablerepo_key: "https://www.postgresql.org/media/keys/ACCC4CF8.asc"
+    - postgresql_pkgnames:
+#       - postgresql         ## postgresql matchs latest release
+        - postgresql-9.5
+    - __postgresql_version: "9.5"
+    - postgresql_data_dir: "/var/lib/postgresql/{{ __postgresql_version }}/main"
+    - postgresql_bin_path: "/usr/lib/postgresql/{{ __postgresql_version }}/bin"
+    - postgresql_config_path: "/etc/postgresql/{{ __postgresql_version }}/main"
+    - postgresql_daemon: postgresql
   roles:
     - { role: juju4.adduser, adduser_user_name: _scumblr, adduser_user_home: '/home/_scumblr', adduser_user_comments: 'Scumblr rails app user', adduser_public_keys: [], adduser_sudoroot: false }
+    - geerlingguy.postgresql
     - juju4.sketchy
     - juju4.scumblr
 
