--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -81,13 +81,15 @@
 - stat: path="{{ scumblr_rails_user_home }}/.rbenv/shims/sidekiq"
   register: gemdep
 - name: install gem dependencies inside rbenv
-  command: "bash -lc \"gem install {{ item.p }} -v {{ item.v }}\" chdir={{ scumblr_root }}"
-  with_items: "{{ scumblr_gems }}"
-  become: yes
-  become_user: "{{ scumblr_rails_user }}"
+#  command: "bash -lc \"gem install {{ item.p }} -v {{ item.v }}\" chdir={{ scumblr_root }}"
+#  with_items: "{{ scumblr_gems }}"
+#  become: yes
+#  become_user: "{{ scumblr_rails_user }}"
 ## FIXME! v2.2. seems required under travis, http://docs.ansible.com/ansible/become.html
 #  become_flags: "-H"
-  become_method: su
+#  become_method: su
+  command: "sudo -Hiu {{ scumblr_rails_user }} bash -lc \"gem install {{ item.p }} -v {{ item.v }}\" chdir={{ scumblr_root }}"
+  with_items: "{{ scumblr_gems }}"
   when: not gemdep.stat.exists
  
 ## ignore_errors as if repeating, get: msg: Local modifications exist in repository (force=no).
