--- a/test/integration/default-v1-postgres/travis.yml
+++ b/test/integration/default-v1-postgres/travis.yml
@@ -13,6 +13,6 @@
     - rbenv_users:
         - "{{ scumblr_rails_user }}"
   roles:
-    - sketchy
-    - scumblr
+    - juju4.sketchy
+    - juju4.scumblr
 
