--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,8 @@ python: "2.7"
 before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq python-apt python-pycurl
- - ln -s ansible-scumblr ../juju4.scumblr
- - ./get-dependencies.sh
+ - "[ -f get-dependencies.sh ] && sh -x get-dependencies.sh"
  - mkdir /tmp/kitchen
- - ln -s /home/travis/build/juju4/ansible-scumblr/test/integration/default/tmp /tmp/kitchen/tmp
 ## serverspec test
  - sudo apt-get install -qq ruby2.0 rake
  - sudo gem2.0 install serverspec
