--- a/vars/Ubuntu-12.04.yml
+++ b/vars/Ubuntu-12.04.yml
@@ -5,3 +5,5 @@ redis_svc: redis-server
 redis_conf: /etc/redis/redis.conf
 supervisor_svc: supervisor
 
+nginx_confdir: /etc/nginx/sites-available
+
