--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -35,6 +35,14 @@ suites:
     includes:
       - ubuntu-16.04
       - ubuntu-14.04
+  - name: default-redhat
+    run_list:
+    attributes:
+    includes:
+      - centos-7
+    provisioner:
+      name: ansible_playbook
+      playbook: test/integration/default/centos.yml
   - name: default-v1
     run_list:
     attributes:
