--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -63,6 +63,13 @@
 
 - file: dest="{{ scumblr_root }}" mode=0755 state=directory owner="{{ scumblr_rails_user }}"
 
+- debug: var=ansible_env
+- command: find /home/_scumblr/.rbenv/
+  register: rbenvfind
+- debug: var=rbenvfind
+- command: "bash -lc \"env\""
+  register: bashenv
+- debug: var=bashenv
 ## FIXME! not executing inside rbenv
 #- gem: name="{{ item }}" state=present user_install=yes
 ## FIXME! not idempotent... quick stat to avoid repetition but far from perfect
