--- a/test/integration/default-v1/default.yml
+++ b/test/integration/default-v1/default.yml
@@ -13,7 +13,8 @@
         - { p: nokogiri, v: 1.6.8.1 }
         - { p: devise, v: 3.3.0 }
         - { p: cancan, v: 1.6.10 }
-        - { p: sidekiq, v: 4.1.4 }
+## "ERROR:  Error installing sidekiq:", "\track requires Ruby version >= 2.2.2.": downgrade from 4.1.4 to 3.0.2(v1.1/Gemfile.lock),TODO 3.5.4 or <4.1.4
+        - { p: sidekiq, v: 3.0.2 }
         - { p: json, v: 1.8.1 }
     - rbenv:
         env: user
