--- a/test/vagrant/site.yml
+++ b/test/vagrant/site.yml
@@ -15,6 +15,6 @@
     - rbenv_users:
         - "{{ scumblr_rails_user }}"
   roles:
-    - sketchy
-    - scumblr
+    - juju4.sketchy
+    - juju4.scumblr
 
